// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownSynapse tests Snapshot tests works with a br statement and loose text 1`] = `
<div>
  <div
    class="markdown"
  >
    <span>
      <p>
         
        some more free
         
      </p>
       
      

       
      <h1
        id="SRC-header-1"
        toc="true"
      >
         
        header
         
      </h1>
       
      

       
      <p>
         
        loose text
         
      </p>
       
      

       
    </span>
  </div>
</div>
`;

exports[`MarkdownSynapse tests Snapshot tests works with header and a link 1`] = `
<div>
  <div
    class="markdown"
  >
    <span>
      <h1
        id="SRC-header-1"
        toc="true"
      >
         
        header 
         
        <a
          href="https://synapse.org"
          target="_blank"
        >
           
          text
           
        </a>
      </h1>
       
      

       
    </span>
  </div>
</div>
`;

exports[`MarkdownSynapse tests Snapshot tests works with two inline widgets 1`] = `
<div>
  <div
    class="markdown"
  >
    <span>
      <p>
        <span
          class="bootstrap-4-backport"
        >
          <a
            class="pill-xl  btn btn-secondary"
            href="#/Help/How It Works"
          >
            sometext
          </a>
        </span>
        <span
          class="bootstrap-4-backport"
        >
          <a
            class="pill-xl  btn btn-secondary"
            href="#/Apply"
          >
            APPLY
          </a>
        </span>
      </p>
       
      

       
    </span>
  </div>
</div>
`;
